--- a/Usage/2019-05-03/boesene.plist
+++ b/Usage/2019-05-03/boesene.plist
@@ -11,37 +11,11 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.0.3</string>
 	</dict>
 	<key>/Applications/Microsoft Excel.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>1</string>
-		<key>open</key>
-		<string>1917</string>
-		<key>secondsforemost</key>
-		<string>104</string>
-		<key>secondsopen</key>
-		<string>115070</string>
-		<key>version</key>
-		<string>15.29.16120900</string>
-	</dict>
-	<key>/Applications/Photo Booth.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>8</string>
-		<key>open</key>
-		<string>1893</string>
-		<key>secondsforemost</key>
-		<string>534</string>
-		<key>secondsopen</key>
-		<string>113583</string>
-		<key>version</key>
-		<string>9.0</string>
-	</dict>
-	<key>/Applications/Preview.app</key>
 	<dict>
 		<key>foremost</key>
 		<string>0</string>
@@ -50,7 +24,33 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
+		<key>version</key>
+		<string>15.29.16120900</string>
+	</dict>
+	<key>/Applications/Photo Booth.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
+		<key>version</key>
+		<string>9.0</string>
+	</dict>
+	<key>/Applications/Preview.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>1</string>
+		<key>open</key>
+		<string>1909</string>
+		<key>secondsforemost</key>
+		<string>38</string>
+		<key>secondsopen</key>
+		<string>114574</string>
 		<key>version</key>
 		<string>10.0</string>
 	</dict>
@@ -63,20 +63,20 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.4</string>
 	</dict>
 	<key>/Applications/System Preferences.app</key>
 	<dict>
 		<key>foremost</key>
-		<string>1</string>
+		<string>0</string>
 		<key>open</key>
-		<string>1920</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>15</string>
+		<string>0</string>
 		<key>secondsopen</key>
-		<string>115212</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>14.0</string>
 	</dict>
@@ -89,7 +89,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.13</string>
 	</dict>
@@ -102,7 +102,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>17.0.3</string>
 	</dict>
@@ -115,7 +115,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.0</string>
 	</dict>
@@ -128,20 +128,20 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.12</string>
 	</dict>
 	<key>/Applications/Utilities/Terminal.app</key>
 	<dict>
 		<key>foremost</key>
-		<string>24</string>
+		<string>41</string>
 		<key>open</key>
 		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>1486</string>
+		<string>2489</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.8.2</string>
 	</dict>
@@ -154,7 +154,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.1.9</string>
 	</dict>
@@ -167,7 +167,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>3.6.5</string>
 	</dict>
@@ -176,11 +176,11 @@
 		<key>foremost</key>
 		<string>0</string>
 		<key>open</key>
-		<string>1729</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.0</string>
 	</dict>
@@ -193,7 +193,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.10</string>
 	</dict>
@@ -206,7 +206,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.9.2</string>
 	</dict>
@@ -219,22 +219,9 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>5.0</string>
-	</dict>
-	<key>/System/Library/CoreServices/CoreServicesUIAgent.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>0</string>
-		<key>open</key>
-		<string>1923</string>
-		<key>secondsforemost</key>
-		<string>0</string>
-		<key>secondsopen</key>
-		<string>115380</string>
-		<key>version</key>
-		<string>180.7.6</string>
 	</dict>
 	<key>/System/Library/CoreServices/Dock.app</key>
 	<dict>
@@ -245,7 +232,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.8</string>
 	</dict>
@@ -256,9 +243,9 @@
 		<key>open</key>
 		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>109</string>
+		<string>28</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>10.13.5</string>
 	</dict>
@@ -271,7 +258,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>15.0.1</string>
 	</dict>
@@ -284,7 +271,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>5.0</string>
 	</dict>
@@ -297,7 +284,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.7</string>
 	</dict>
@@ -306,37 +293,24 @@
 		<key>foremost</key>
 		<string>0</string>
 		<key>open</key>
-		<string>1729</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>5.0</string>
-	</dict>
-	<key>/System/Library/CoreServices/UserNotificationCenter.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>1</string>
-		<key>open</key>
-		<string>1923</string>
-		<key>secondsforemost</key>
-		<string>3</string>
-		<key>secondsopen</key>
-		<string>115380</string>
-		<key>version</key>
-		<string>3.3.0</string>
 	</dict>
 	<key>/System/Library/CoreServices/loginwindow.app</key>
 	<dict>
 		<key>foremost</key>
-		<string>1</string>
+		<string>4</string>
 		<key>open</key>
 		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>84</string>
+		<string>299</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>9.0</string>
 	</dict>
@@ -349,11 +323,11 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>n/a</string>
 	</dict>
-	<key>/System/Library/Frameworks/Security.framework/Versions/A/MachServices/SecurityAgent.bundle</key>
+	<key>/System/Library/Input Methods/CharacterPalette.app</key>
 	<dict>
 		<key>foremost</key>
 		<string>0</string>
@@ -362,20 +336,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
-		<key>version</key>
-		<string>9.0</string>
-	</dict>
-	<key>/System/Library/Input Methods/CharacterPalette.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>0</string>
-		<key>open</key>
-		<string>1729</string>
-		<key>secondsforemost</key>
-		<string>0</string>
-		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.0.1</string>
 	</dict>
@@ -384,11 +345,11 @@
 		<key>foremost</key>
 		<string>0</string>
 		<key>open</key>
-		<string>1729</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>480.60.1</string>
 	</dict>
@@ -401,7 +362,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>3.2</string>
 	</dict>
@@ -414,7 +375,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.8.7</string>
 	</dict>
@@ -427,37 +388,24 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.3.1.0</string>
 	</dict>
 	<key>/Users/boesene/Applications/Firefox Nightly.app</key>
 	<dict>
 		<key>foremost</key>
-		<string>285</string>
+		<string>403</string>
 		<key>open</key>
-		<string>1729</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>17141</string>
+		<string>24228</string>
 		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
-		<string>67.0a1</string>
+		<string>68.0a1</string>
 	</dict>
 	<key>/Users/boesene/Applications/Firefox Nightly.app/Contents/MacOS/crashreporter.app</key>
-	<dict>
-		<key>foremost</key>
-		<string>0</string>
-		<key>open</key>
-		<string>1729</string>
-		<key>secondsforemost</key>
-		<string>0</string>
-		<key>secondsopen</key>
-		<string>103792</string>
-		<key>version</key>
-		<string>1.0</string>
-	</dict>
-	<key>/Users/boesene/Applications/Gimp-2.10.app</key>
 	<dict>
 		<key>foremost</key>
 		<string>0</string>
@@ -466,7 +414,20 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
+		<key>version</key>
+		<string>1.0</string>
+	</dict>
+	<key>/Users/boesene/Applications/Gimp-2.10.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>1</string>
+		<key>open</key>
+		<string>1922</string>
+		<key>secondsforemost</key>
+		<string>86</string>
+		<key>secondsopen</key>
+		<string>115343</string>
 		<key>version</key>
 		<string>2.10.4</string>
 	</dict>
@@ -479,7 +440,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>72.0.3626.109</string>
 	</dict>
@@ -492,7 +453,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2018.2.3</string>
 	</dict>
@@ -505,7 +466,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>3.0.4</string>
 	</dict>
@@ -518,7 +479,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>2.94</string>
 	</dict>
@@ -531,7 +492,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>n/a</string>
 	</dict>
@@ -544,7 +505,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.7.10</string>
 	</dict>
@@ -557,22 +518,48 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.8.8</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/08B4640B-E5E1-45A7-9037-F61AC00B6DA3/d/Spotify.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>1</string>
+		<key>open</key>
+		<string>1730</string>
+		<key>secondsforemost</key>
+		<string>43</string>
+		<key>secondsopen</key>
+		<string>103859</string>
+		<key>version</key>
+		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
 	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/10CA4250-FDBD-4A66-B230-CC0F7942F007/d/Spotify.app</key>
 	<dict>
 		<key>foremost</key>
-		<string>17</string>
+		<string>0</string>
 		<key>open</key>
-		<string>1729</string>
+		<string>1923</string>
 		<key>secondsforemost</key>
-		<string>1038</string>
+		<string>0</string>
 		<key>secondsopen</key>
-		<string>103792</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/16A2C72B-EA58-4369-AF28-4512DE1BCD78/d/VictiScout.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
+		<key>version</key>
+		<string>4.1.0</string>
 	</dict>
 	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/2199FB91-A4CF-458C-A673-C2375986DDA7/d/Spotify.app</key>
 	<dict>
@@ -583,7 +570,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -596,9 +583,22 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/2FF21999-AD18-4655-B119-0A5EF83E5C14/d/VictiScout.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
+		<key>version</key>
+		<string>4.1.0</string>
 	</dict>
 	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/401FCBC3-F04B-4341-B7B7-870F47727A90/d/Spotify.app</key>
 	<dict>
@@ -609,7 +609,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -622,7 +622,33 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
+		<key>version</key>
+		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/53D98A71-2175-4060-82BB-794AE4B601EB/d/Spotify.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
+		<key>version</key>
+		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/62D71BE4-9C12-415B-80A2-1EC81B17E103/d/Spotify.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -635,7 +661,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -648,7 +674,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -661,7 +687,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -674,7 +700,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -687,7 +713,20 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
+		<key>version</key>
+		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/A6A2B276-3E61-473B-B545-B3EE3F37D500/d/Spotify.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -700,7 +739,20 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
+		<key>version</key>
+		<string>1.0.88.353.g15c26ea1</string>
+	</dict>
+	<key>/private/var/folders/1d/5gzzbybd5b5f5r8rh7rk5ych5mnzzx/T/AppTranslocation/AF7547A6-BE63-4AC0-8A62-CE026EDBB720/d/Spotify.app</key>
+	<dict>
+		<key>foremost</key>
+		<string>0</string>
+		<key>open</key>
+		<string>1923</string>
+		<key>secondsforemost</key>
+		<string>0</string>
+		<key>secondsopen</key>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -713,7 +765,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -726,7 +778,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -739,7 +791,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -752,7 +804,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -765,7 +817,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -778,7 +830,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
@@ -791,7 +843,7 @@
 		<key>secondsforemost</key>
 		<string>0</string>
 		<key>secondsopen</key>
-		<string>115380</string>
+		<string>115413</string>
 		<key>version</key>
 		<string>1.0.88.353.g15c26ea1</string>
 	</dict>
